# SustiEats

./: CMakeLists.txt  README.md  main.cpp
data/: admin.txt  customers.txt  orders.txt  owners.txt  restaurants.txt  runcmd.txt
include/: Address.hpp  Admin.hpp  Cart.hpp  Category.hpp  Customer.hpp  LoyaltyManager.hpp  MenuItem.hpp  Order.hpp  Owner.hpp  Payment.hpp  Persistence.hpp  Restaurant.hpp  User.hpp  VoiceManager.hpp
src/: Admin.cpp  Cart.cpp  Customer.cpp  LoyaltyManager.cpp  MenuItem.cpp  Order.cpp  Owner.cpp  Payment.cpp  Persistence.cpp  Restaurant.cpp  User.cpp  VoiceManager.cpp
